# primer-hierarchical-tagger

./: README.md  requirements.txt  setup.cfg
engines_utils/: engines.py
examples/: amazon-product-descriptions.ipynb
examples/data/: amazon_products_precomputed.json
hierarchical_tagger/: hierarchical_tagger.py
hierarchical_tagger/data/: countries.json  us_states.json
webapp/: app.py  utils.py
