[flake8]
max-line-length = 100

[pep8]
max-line-length=100

[metadata]
name = hierarchical_tagger
version = 0.0.1
author = Paolo Lucchino
author_email = paolo.lucchino@primer.ai
description = Extract topic hierarchies from text documents and tag these.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PrimerAI
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    scipy
    scikit-learn
    scikit-network
    sentence-transformers
    treelib